<resources>
    <string name="app_name">Fooddiz</string>
    <string name="welcome">Welcome Back</string>
    <string name="family_inclusion">Welcome to our family</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="enter_password">Enter Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or">OR</string>
    <string name="loginBG">LOGIN</string>


    //Headings
    <string name="heading_one">Welcome, OnBoard !</string>
    <string name="heading_two">Different modes for different occasions</string>
    <string name="heading_three">No more questions asked</string>
    <string name="heading_fourth">Mark Twain\'s words</string>

    //Description
    <string name="desc_one">We are happy to have you here at Fooddiz. We can\'t wait for you order your first food</string>
    <string name="desc_two">Fit, Party, In-general mode catering to different moodes to make the moment unforgettable</string>
    <string name="desc_three">Get quick delivery in busy schedules. Say goodbye to "Sir, where is your home?"</string>
    <string name="desc_fourth">The secret of success in life is to eat what you like and let the food fight it out inside</string>
    <string name="skip">SKIP</string>
    <string name="back">BACK</string>
    <string name="next">NEXT</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="hi">HI</string>
    <string name="phone">Phone</string>
</resources>